#
# Copyright (C) 2010-2024 Arm Limited or its affiliates. All rights reserved.
#
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the License); you may
# not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an AS IS BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

add_subdirectory(perf_test_arm_add_s8)
add_subdirectory(perf_test_arm_add_s16)
add_subdirectory(perf_test_arm_avgpool_s8)
add_subdirectory(perf_test_arm_avgpool_s16)
add_subdirectory(perf_test_arm_batch_matmul_s8)
add_subdirectory(perf_test_arm_batch_matmul_s16)
# add_subdirectory(perf_test_arm_depthwise_conv_3x3_s8)
add_subdirectory(perf_test_arm_dequantize_s8_f32)
add_subdirectory(perf_test_arm_dequantize_s16_f32)
add_subdirectory(perf_test_arm_elementwise_mul_s8)
add_subdirectory(perf_test_arm_elementwise_mul_s16)
add_subdirectory(perf_test_arm_fully_connected_s4)
add_subdirectory(perf_test_arm_fully_connected_s8)
add_subdirectory(perf_test_arm_maximum_minimum_s8)
add_subdirectory(perf_test_arm_maximum_minimum_s16)
add_subdirectory(perf_test_arm_maxpool_s8)
add_subdirectory(perf_test_arm_maxpool_s16)
add_subdirectory(perf_test_arm_mean_s8)
add_subdirectory(perf_test_arm_mean_s16)
add_subdirectory(perf_test_arm_mul_s8)
add_subdirectory(perf_test_arm_mul_s16)
add_subdirectory(perf_test_arm_pad_s8)
add_subdirectory(perf_test_arm_pad_s16)
add_subdirectory(perf_test_arm_quantize_f32_s8)
add_subdirectory(perf_test_arm_quantize_f32_s16)
add_subdirectory(perf_test_arm_reduce_max_s8)
add_subdirectory(perf_test_arm_relu_s8)
add_subdirectory(perf_test_arm_relu6_s8)
add_subdirectory(perf_test_arm_softmax_s8)
add_subdirectory(perf_test_arm_softmax_s16)
add_subdirectory(perf_test_arm_strided_slice_s8)
add_subdirectory(perf_test_arm_transpose_s8)
add_subdirectory(perf_test_arm_transpose_s16)